--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-streamlit
-scikit-learn
-pandas
-joblib
-gensim
-distance
-numpy
-matplotlib
-seaborn
-bs4
+streamlit==1.37.0
+scikit-learn==1.6.1
+pandas==2.2.2
+joblib==1.5.1
+gensim==4.3.3
+Distance==0.1.3
+numpy==1.26.4
+matplotlib==3.10.0
+seaborn==0.13.2
+beautifulsoup4==4.13.4
+fuzzywuzzy==0.18.0
+nltk==3.9.1
